Fixed footer alignment

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -14,7 +14,7 @@ i.material-icons {
   width: 100%;
   background-color: $footer-primary-color;
   &__material-icons {
-    color:white;
+    color:$home-section-bg-color;
     font-size: 80px !important;
   }
   &__container {
@@ -28,16 +28,16 @@ i.material-icons {
       min-width: 200px;
       font-weight: 400;
       &__item {
-        color: white;
+        color: $home-section-bg-color;
         border-radius: 14px;
         font-size: $tc-font-size-h5;
         cursor: pointer;
         max-width: 250px;
         &__cafe {
-          padding: 0 16px;  
+          padding: 0 0px;  
         }
         &:hover {
-          background-color: rgba(235, 235, 235, 0.8);
+          background-color: $home-section-bg-color;
           color: $tc-color-gray-shade-6;
         }
       }
@@ -59,7 +59,7 @@ i.material-icons {
     &__title {
       margin: 0.5rem 0rem;
       font-size: 14px;
-      color: white;
+      color: $home-section-bg-color;
       font-weight: bold;
     }
 
@@ -74,7 +74,7 @@ i.material-icons {
       padding-bottom: 1rem;
       display: inline-block;
       min-width: 200px;
-      color: white;
+      color: $home-section-bg-color;
       &__text {
         margin: 1rem 0rem;
         font-size: $tc-font-size-h5;
@@ -85,19 +85,22 @@ i.material-icons {
         font-size: 30px;
         //background: rgba(0, 0, 0, 0.4);
         border-radius: 100%;
-        border: 4px solid #fff;
+        border: 4px solid $home-section-bg-color;
         box-shadow: 0 1px 10px rgba(0, 0, 0, 0.46);
         display: table-cell;
         padding: 15px;
  
         vertical-align: middle;
         &:hover{
-          box-shadow: 0 1px 10px rgba(145, 145, 145, 0.46);
+           transition: all 550ms cubic-bezier(.45,1,.32,1);
+          color: $primary-color;
+          border: 4px solid $primary-color;
         }
       }
         &__container {
-          padding: 0 16px;
+          padding: 0 0px;
           width:40px;
+          padding-top: 16px;
         }
         @media screen and (max-width: 520px) {
           &__container {
@@ -120,7 +123,7 @@ i.material-icons {
         display: flex;
         align-items: center;
         margin: 1rem auto;
-        color: white;
+        color: $home-section-bg-color;
         min-width: 140px;
         &__icon {
           margin-right: 10px;
@@ -141,7 +144,7 @@ i.material-icons {
   }
   &__copyright {
     padding: 1rem 1rem;
-    color:white;
+    color:$home-section-bg-color;
     background-color: rgba(51, 51, 51, 0.08);
     &__text {
       padding: 0 16px;
@@ -153,8 +156,17 @@ i.material-icons {
   ::ng-deep {
     .mat-list-item {
       max-height: 30px;
+      &:hover{
+        border-radius: 0px;
+        cursor: pointer;
+        transition: all 550ms cubic-bezier(.45,1,.32,1);
+        background-color: unset;
+        color: $primary-color;
+        max-width: 150px;
+      }
       &-content {
         max-height: 30px;
+        padding: 0 0px !important;
       }
     }
   }
